# test_mcp

./: Dockerfile  PRD_Testing_MCP.md  README.md  docker-compose.yml  pyproject.toml  testing-mcp.json
.github/workflows/: ci.yml
testing_mcp/: __init__.py  cli.py  exceptions.py  log.py
testing_mcp/analyzers/: __init__.py  project.py
testing_mcp/api/: __init__.py  graphql.py  grpc_test.py  testing.py  websocket_test.py
testing_mcp/browser/: __init__.py  stealth_browser.py
testing_mcp/database/: __init__.py  validation.py
testing_mcp/fix/: __init__.py  ci.py  docker.py  gitignore.py  migrations.py
testing_mcp/generators/: __init__.py  tests.py
testing_mcp/performance/: __init__.py  benchmark.py  load_test.py  profiler.py
testing_mcp/plugins/: __init__.py  base.py
testing_mcp/reporters/: __init__.py  report.py
testing_mcp/runners/: __init__.py  analysis.py  base.py  console.py  distributed.py  game_testing.py  go_runner.py  integration.py  java_runner.py  js_runner.py  mobile.py  mutation.py  python_runner.py  rust_runner.py
testing_mcp/security/: __init__.py  config_scanner.py  dast.py  dependency.py  headers.py  reporter.py  sast.py  scanner.py  secrets.py  tls.py  web_crawler.py
testing_mcp/server/: __init__.py  app.py  state.py  stdio.py  tools.py
testing_mcp/tests/: test_accessibility.py  test_analysis.py  test_analyzers.py  test_api.py  test_browser.py  test_config.py  test_database.py  test_fix_ci.py  test_fix_docker.py  test_fix_gitignore.py  test_fix_migrations.py  test_generators.py  test_graphql.py  test_grpc.py  test_integration.py  (+22 more)
(+23 files in other folders)
